infra/k8s/base/namespace.yaml
##
##
## ============================================================================
## WYSHCARE PLATFORM
## ============================================================================
##
## File: infra/k8s/base/namespace.yaml
##
## Product:
## WyshCare Healthcare Operating System
##
## Brand:
## WYSH
##
## Founder:
## Vimarshak Prudhvi
##
## Purpose:
## Configuration file for base
##
## Responsibilities:
##  * - Support infrastructure functionality
##
## Last Reviewed:
## 2026-06-12
##
## ============================================================================
## (c) Wysh Technologies
## Built by Vimarshak Prudhvi
## All Rights Reserved
## ============================================================================
##

apiVersion: v1
kind: Namespace
metadata:
  name: wyshcare
